--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -91,3 +91,18 @@ footer {
 footer p {
   margin-bottom: .25rem;
 }
+
+.videoInsert {
+  position: relative; 
+  right: 0; 
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto; 
+  height: auto; 
+  z-index: 1;
+  background-size: cover;
+  overflow: hidden;
+}
