socketio integration, still errors

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,3 +106,8 @@ footer p {
   background-size: cover;
   overflow: hidden;
 }
+
+.comments {
+  color: rgb(201, 195, 182);
+  background-color: rgb(59, 80, 97);
+}
