passport auth, database, video playback, upload

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,100 +1,8 @@
 body {
-  background-color: #232730;
-  min-height: 75rem; /* Can be removed; just added for demo purposes */
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-.navbar {
-  margin-bottom: 0;
-  background-color: #232730;
-}
-
-.navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E")
-}
-
-.btn-primary{
-  background-color: #085AA3;
-  border-color: #085AA3;
-  margin-right: 5px;
-}
-
-.btn-secondary{
-  margin-left: 5px;
-  background-color: #16171B;
-}
-
-.jumbotron {
-  color: #D7D5D0;
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  margin-bottom: 0;
-  background-color: #16171B;
-}
-
-.jumbotron p:last-child {
-  margin-bottom: 0;
-}
-
-.jumbotron-heading {
-  font-weight: 300;
-}
-
-.jumbotron .container {
-  max-width: 40rem;
-}
-
-.album {
-  min-height: 50rem; /* Can be removed; just added for demo purposes */
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  background-color: #22262F;
-}
-
-.card {
-  float: left;
-  width: 33.333%;
-  padding: .75rem;
-  margin-bottom: 2rem;
-  border: 0;
-  background-color: #22262F;
-}
-
-a{
-  color: rgb(201, 195, 182) ;
-}
-
-.card > img {
-  margin-bottom: .75rem;
-}
-
-.card:hover{
-  transition: all .4s ease;
-  -webkit-transition: all .4s ease;
-  background-color: rgb(20, 58, 92);
-  cursor: pointer;
-}
-
-.card-text {
-  font-size: 85%;
-}
-
-.text-muted{
-  color: rgb(201, 195, 182) !important;
-}
-
-footer {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-  background-color: #15161A;
-}
-
-footer p {
-  margin-bottom: .25rem;
-}
-
-
-@media screen and (max-width: 700px) {
-  *{
-    background-color: green !important;
-  }
+a {
+  color: #00B7FF;
 }
