--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,6 +67,11 @@ a{
   margin-bottom: .75rem;
 }
 
+.card > a > img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .card:hover{
   transition: all .4s ease;
   -webkit-transition: all .4s ease;
@@ -114,4 +119,9 @@ footer p {
 
 #commentArea{
   list-style-type: none;
+  text-align: left;
+}
+
+#commentArea li:hover{
+  border: solid 1px aliceblue;
 }
