--- a/views/index.pug
+++ b/views/index.pug
@@ -119,6 +119,22 @@ block content
       }
       document.getElementById("m").value = "";
     }
+    document.onkeydown=function(evt){
+      var keyCode = evt ? (evt.which ? evt.which : evt.keyCode) : event.keyCode;
+      if(keyCode == 13){
+        evt.preventDefault();
+        socket.emit("chat message", {message: document.getElementById("m").value, name: "#{type.name}"});
+        //- document.getElementById("commentArea").innerHTML += "<li>#{type.name}</li>";
+        var ul = document.getElementById("commentArea");
+        var li = document.createElement("li");
+        var para = document.createElement("p");
+        li.appendChild(document.createTextNode("From anonymous:"));
+        para.appendChild(document.createTextNode(document.getElementById("m").value));
+        li.appendChild(para);
+        ul.appendChild(li);
+        document.getElementById("m").value = "";
+      }
+    }
 
 
   
