--- a/views/user/dashboard.pug
+++ b/views/user/dashboard.pug
@@ -3,6 +3,23 @@ extends ../layout
 block content
     h1.mt-4 Dashboard
     button(id="btn" onclick="location.href='/video/upload'").btn.btn-secondary Upload Video
-    p.lead.mb-3 Welcome #{user}
+    p.lead.mb-3 Welcome #{username}
     a.btn.btn-primary(href='/users/logout') Logout
     button(id="btn" onclick="location.href='/'").btn.btn-secondary Home
+    button(id="btn" onclick="location.href='/users/subscribe'").btn.btn-secondary Manage Subscriptions
+    each category in categories
+        section
+        h3=category
+            each result in results
+                .card
+                    if category=result.category
+                        a(href="/bees?id=" + result.id + "#album")
+                            img(src=result.thumbnailPath, alt=result.name)
+                            h3=result.name
+                            //- https://github.com/onedesign/express-socketio-tutorial
+
+                            p.card-text
+                                if result.description.length > 50
+                                    | #{result.description.substring(0, 50)} . . .
+                                else
+                                    | #{result.description}
