homebutton,and placeholdertext

--- a/views/index.pug
+++ b/views/index.pug
@@ -18,14 +18,14 @@ block content
               a.btn.btn-secondary.btn-block(href='/users/logout') Logout
   .navbar.navbar-inverse.bg-inverse
     .container.d-flex.justify-content-between
-      a.navbar-brand(href="#") Banana Juice
+      a.navbar-brand(href="/") Banana Juice
       button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation")
         span.navbar-toggler-icon 
   section.jumbotron.text-center
     .container
-      h1.jumbotron-heading Album example
+      h1.jumbotron-heading Banana Juice
       p.lead.text-muted
-        | Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.
+        |Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
   section.album.text-muted#album
     .container
       .row
