fixed login message on single video screen

--- a/views/user/login.pug
+++ b/views/user/login.pug
@@ -24,3 +24,4 @@ block content
                 p.lead.mt-4
                     | No Account?
                     a(href='/users/register') Register
+                button(id="btn" onclick="location.href='/'").btn.btn-secondary Home
