--- a/views/index.pug
+++ b/views/index.pug
@@ -51,18 +51,18 @@ block content
             h3=result.name
             p.card-text
               | #{result.description}
-  //- if bee
-  //-   section.comments.text-center
-  //-     h3 this is the comment section :)
-  //-     form(action="", onsubmit="event.preventDefault(); messageFormFunc();")#commentForm
-  //-       textarea(id="m" cols="50", rows="5")
-  //-       button#messageButton Submit
-      //- ul#commentArea   
-      //-   for result in results
-      //-     if type.id == result.id
-      //-       for comment in result.comments
-      //-         li From #{comment.user}
-      //-           p=comment.comment
+  if bee
+    section.comments.text-center
+      h3 Leave a comment #{username}
+      form(action="", onsubmit="event.preventDefault(); messageFormFunc();")#commentForm
+        textarea(id="m" cols="50", rows="5")
+        button#messageButton Submit
+      ul#commentArea   
+        for result in results
+          if type.id == result.id
+            for comment in result.comments
+              li From #{comment.user}
+                p=comment.comment
   footer.text-muted
     .container
       p.float-right
