--- a/views/user/register.pug
+++ b/views/user/register.pug
@@ -28,3 +28,4 @@ block content
             p.lead.mt-4
                 | Have An Account?
                 a(href='/users/login') Login
+            button(id="btn" onclick="location.href='/'").btn.btn-secondary Home
